--- a/bot/.env.dist
+++ b/bot/.env.dist
@@ -1,4 +1,4 @@
-ADMINS=2079383
-BOT_TOKEN=6573332905:_dNl9zguN_YTPJ8
+ADMINS=973108256
+BOT_TOKEN=6729037094:AAE0-IKMz2jAcE37XEnW1jGPbXxyM3nwSP4
 ip=localhost
-BASE_URL=https://6cb7-185-213-229-46.ngrok-free.app/
+BASE_URL=http://192.168.1.13:8000/ 
